--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -149,7 +149,7 @@
           *ngIf="standalone">
           <a class="nav-link">
             <pa-icon name="knowledge-box"></pa-icon>
-            <span class="nav-link-title">{{ 'stash.create' | translate }}</span>
+            <span class="nav-link-title">{{ 'stash.side.manage-kbs' | translate }}</span>
           </a>
         </div>
       </div>
