[sc-7474] Add a clear separation between UI and backend
- manage accounts:
  - Add `global-` prefix to existing `account.service` and `account.models`
  - Create new `account-ui.models` which are the models used by the UI
  - Create new `account.service` calling the `global-account.service` and mapping backend models to the UI ones
  - Create a new `manager.store` replacing old `account-details.store`
  - The new account service is updating the store automatically on each request

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -27,17 +27,19 @@
         Type:
         <strong>{{ (account | async)?.type }}</strong>
       </div>
-      <div *ngIf="(account | async)?.type === 'stash-trial' && !!(account | async)?.trial_expiration_date">
-        Trial expiration date:
-        <strong>{{ (account | async)?.trial_expiration_date | date : 'yyyy-MM-dd' }}</strong>
-      </div>
+      <ng-container *ngIf="(account | async)?.type === 'stash-trial'">
+        <div *ngIf="(account | async)?.trialExpirationDate as trialExpirationDate">
+          Trial expiration date:
+          <strong>{{ trialExpirationDate | date: 'yyyy-MM-dd' }}</strong>
+        </div>
+      </ng-container>
       <div>
-        Max kbs:
-        <strong>{{ (account | async)?.stashes?.max_stashes }}</strong>
+        Max KBs:
+        <strong>{{ (account | async)?.maxKbs === -1 ? 'Unlimited' : (account | async)?.maxKbs }}</strong>
       </div>
       <div>
         Dedicated processors state:
-        <strong>{{ (account | async)?.dedicated_processors_state }}</strong>
+        <strong style="text-transform: capitalize">{{ (account | async)?.dedicatedProcessorsState }}</strong>
       </div>
     </div>
     <nav>
@@ -58,7 +60,7 @@
           Knowledge Boxes
         </li>
         <li
-          *ngFor="let kb of (account | async)?.stashes?.items"
+          *ngFor="let kb of kbList | async"
           class="child-route"
           [routerLink]="'kb/' + kb.id"
           routerLinkActive="active">
