[sc-7470]: add book a demo button in header
Also update left and right spaces on the layout to match the latest designs.

--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.scss
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .account-nua {
-  padding: 70px var(--app-layout-margin-right) 60px 5%;
+  padding: 70px var(--app-layout-margin-right) 60px var(--app-layout-margin-left);
 }
 
 h2 {
