--- a/libs/common/src/lib/base/css-variables.scss
+++ b/libs/common/src/lib/base/css-variables.scss
@@ -2,7 +2,8 @@
   --app-min-width: 1024px;
   --app-background-color: var(--stf-gray-background);
   --app-topbar-height: 70px;
-  --app-layout-margin-right: 7.3vw;
+  --app-layout-margin-left: 6rem;
+  --app-layout-margin-right: 2rem;
 
   // z-index
   --app-zindex-topbar: 1000;
