--- a/apps/dashboard/src/app/account/account-users/account-users.component.scss
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .account-users {
-  padding: 70px var(--app-layout-margin-right) 60px 5%;
+  padding: 70px var(--app-layout-margin-right) 60px var(--app-layout-margin-left);
   h2 {
     margin: 0 0 36px 0;
     font-weight: var(--stf-font-weight-bold);
