--- a/libs/common/src/lib/resources/resource-list/resource-list.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.scss
@@ -3,7 +3,7 @@
 $table-breakpoint: 1400px;
 
 .resource-list {
-  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) 5%;
+  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) var(--app-layout-margin-left);
   position: relative;
   min-height: rhythm(24);
 }
