--- a/libs/common/src/lib/search/search.component.scss
+++ b/libs/common/src/lib/search/search.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .search-page {
-  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) 5%;
+  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) var(--app-layout-margin-left);
 
   .search-bar-section {
     display: flex;
