Fix small visual glitch in labels of textareas

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -104,7 +104,7 @@
               <div
                 *ngFor="let key of promptKeys"
                 [formGroupName]="key">
-                <div [hidden]="key !== currentPromptKey">
+                <div *ngIf="key == currentPromptKey">
                   <div
                     *ngIf="!!promptConfigurations?.schemas?.[key]?.properties?.['prompt']"
                     class="user-prompts">
