--- a/libs/common/src/lib/upload/upload-progress/upload-progress.component.html
+++ b/libs/common/src/lib/upload/upload-progress/upload-progress.component.html
@@ -26,7 +26,7 @@
             <div
               class="error body-xs"
               *ngIf="file.conflicts">
-              <pa-icon name="warning"></pa-icon>
+              <pa-icon name="info"></pa-icon>
               {{ 'upload.conflict' | translate }}
             </div>
 
