Update resource and paragraph classification flow
- Delete `stf-label-selection` component
- Create `stf-labels-expander`: a list of expanders containing a checkbox by label
- In resource classification page:
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - display selected labels in `app-label-list` on the right
- In paragraph classification page:'
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - remove `stf-label-selection` (selection will be visible in `stf-labels-expander` instead)
- Change background color of selected expander to `$color-neutral-lighter`
- Fix pattern in label.component

--- a/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
@@ -29,8 +29,7 @@
           *ngIf="(isAdminOrContrib | async) === true"
           icon="edit"
           aspect="basic"
-          [routerLink]="'../' + labelSet.key"
-          [kind]="expandedLabelSetIds.includes(labelSet.key) ? 'inverted' : 'secondary'">
+          [routerLink]="'../' + labelSet.key">
           {{ 'label-set.edit' | translate }}
         </pa-button>
         <pa-button
