--- a/libs/common/src/lib/label/label-sets/label-set/label/label.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label/label.component.html
@@ -11,7 +11,7 @@
     [class.unsaved-label]="!label">
     <input
       type="text"
-      pattern="[^/\{\}]+"
+      pattern="[^\/\{\}]+"
       cdkFocusInitial
       [class.unsaved-label]="!label"
       [formControl]="title"
