--- a/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.scss
@@ -1,8 +1,23 @@
 @import 'apps/dashboard/src/variables';
+@import '../edit-resource.tokens';
 
 .classification-container {
   display: flex;
   flex-direction: column;
   gap: rhythm(2);
+  padding-top: 0;
   padding-bottom: rhythm(10);
+}
+
+.labels-container {
+  display: flex;
+  gap: rhythm(5);
+}
+.label-selector-container {
+  max-height: calc(
+    100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height}
+  );
+  overflow: auto;
+  padding-right: rhythm(2);
+  width: rhythm(32);
 }
