[sc-7498] Knowledge box list needs more padding

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
@@ -54,7 +54,7 @@
     display: flex;
     gap: rhythm(2);
     justify-content: center;
-    margin-top: rhythm(3);
+    padding: rhythm(3) 0 rhythm(6);
   }
 
   .kb {
