--- a/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.html
+++ b/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.html
@@ -18,7 +18,7 @@
       </div>
       <app-label-list
         [labelSets]="resourceLabelSets | async"
-        [labelSelection]="currentLabels | async"
+        [labelSelection]="(currentLabels | async) || []"
         (labelSelectionChange)="updateLabels($event)"></app-label-list>
     </div>
   </div>
