Update resource and paragraph classification flow (#1070)
* Update resource and paragraph classification flow

- Delete `stf-label-selection` component
- Create `stf-labels-expander`: a list of expanders containing a checkbox by label
- In resource classification page:
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - display selected labels in `app-label-list` on the right
- In paragraph classification page:'
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - remove `stf-label-selection` (selection will be visible in `stf-labels-expander` instead)
- Change background color of selected expander to `$color-neutral-lighter`
- Fix pattern in label.component

* fix prod build

--- a/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.html
+++ b/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.html
@@ -1,19 +1,31 @@
 <div class="main-container">
-  <div class="scrollable-area classification-container">
-    <p *ngIf="(isReady | async) && !hasLabels">
+  <div
+    class="scrollable-area classification-container"
+    *ngIf="isReady | async">
+    <p *ngIf="(hasLabels | async) === false">
       {{ 'resource.classification.no-resource-labelset' | translate }}
       <a [routerLink]="(kbUrl | async) + '/label-sets'">{{ 'resource.classification-page-link' | translate }}</a>
     </p>
-    <app-label-field
-      [selection]="currentLabels"
-      [disabled]="!hasLabels || (isAdminOrContrib | async) === false"
-      (hasLabels)="updateHasLabels($event)"
-      (selectionChange)="updateLabels($event)"></app-label-field>
+
+    <div class="labels-container">
+      <div
+        *ngIf="(isAdminOrContrib | async) === true"
+        class="label-selector-container">
+        <stf-labels-expander
+          [labelSets]="resourceLabelSets | async"
+          [currentSelection]="currentSelection"
+          (updateSelection)="updateLabel($event)"></stf-labels-expander>
+      </div>
+      <app-label-list
+        [labelSets]="resourceLabelSets | async"
+        [labelSelection]="(currentLabels | async) || []"
+        (labelSelectionChange)="updateLabels($event)"></app-label-list>
+    </div>
   </div>
 </div>
 
 <footer
-  *ngIf="hasLabels"
+  *ngIf="hasLabels | async"
   class="form-buttons">
   <pa-button
     kind="primary"
