[sc-7483] Fix title width on search results

--- a/libs/search-widget/src/components/result-row/ResultRow.scss
+++ b/libs/search-widget/src/components/result-row/ResultRow.scss
@@ -2,6 +2,7 @@
   --paragraph-height: var(--rhythm-4);
   --paragraph-gap: var(--rhythm-0_5);
   --expanded-paragraph-height: 0px;
+  --title-icon-width: var(--rhythm-3);
 
   display: flex;
 
@@ -27,6 +28,14 @@
 
       .result-icon {
         margin-top: var(--rhythm-0_25);
+      }
+      .result-title.no-thumbnail {
+        // padding --rhythm-2 on each side, gap --rhythm-1 between icon and title
+        max-width: calc(100vw - var(--rhythm-4) - var(--title-icon-width) - var(--rhythm-1));
+      }
+      .result-title:not(.no-thumbnail) {
+        // padding --rhythm-2 on each side
+        max-width: calc(100vw - var(--rhythm-4));
       }
     }
   }
@@ -69,6 +78,12 @@
 
       h3 {
         cursor: pointer;
+      }
+      .result-title-container {
+        .result-title:not(.no-thumbnail) {
+          // padding --rhythm-2 on each side, thumbnail and gap between thumbnail and title
+          max-width: calc(100vw - var(--rhythm-4) - var(--width-thumbnail) - var(--rhythm-2));
+        }
       }
     }
   }
