--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -26,9 +26,7 @@
         (click)="selectUpload('qna')"></stf-upload-option>
     </div>
 
-    <div
-      class="desktop-option"
-      *ngIf="!standalone">
+    <div class="desktop-option">
       <p class="body-m description">
         <span class="title-xs">Nuclia Desktop.</span>
         {{ 'stash.upload.desktop.description' | translate }}
